# raterlog

./: .env  .gitignore  README.md  bun.lockb  docker-compose.yml  kong.yaml  package.json  pnpm-lock.yaml  rundocker.bat
api/: Cargo.toml  Dockerfile  ca.pem
api/migrations/: 0001_setup.cql
api/src/: db.rs  main.rs
api/src/routes/: log.rs
kong/: Dockerfile  kong.yml
prisma/: schema.prisma  store.db3
src/app/: layout.tsx
src/app/(auth)/signin/: page.tsx
src/app/(auth)/signup/: page.tsx
src/app/(dash)/: layout.tsx
src/app/(dash)/dash/: page.tsx
src/app/dash/: page.tsx
src/app/dash/[...slug]/: page.tsx
src/components/: nav.tsx
web/: .env  bun.lockb  package.json
web/prisma/: schema.prisma  store.db3
web/src/app/(auth)/: layout.tsx
web/src/app/(auth)/signin/: page.tsx
web/src/app/(auth)/signup/: page.tsx
web/src/app/(dash)/: layout.tsx
web/src/app/(dash)/dash/: page.tsx
web/src/app/(dash)/dash/[...slug]/: page.tsx
web/src/app/(home)/: layout.tsx  page.tsx
web/src/app/dash/: layout.tsx  page.tsx
web/src/app/dash/[...slug]/: page.tsx
web/src/components/: LiveLogs.tsx  nav.tsx
web/src/lib/: auth.ts
