[package]
name = "raterlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.11"
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
actix-web = "4.9.0"
scylla = "0.13.2"
