[package]
name = "raterlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
actix-web = "4.9.0"
scylla = "0.13.2"
tokio-postgres = "0.7.11"
chrono = "0.4.38"
actix-web-actors = "4.2.0"
actix = "0.13.0"
tokio-stream = "0.1"
futures-core = "0.3"
actix-cors = "0.7.0"
